New iframe content may not be reflected in the ax tree. https://bugs.webkit.org/show_bug.cgi?id=72100

Reviewed by Chris Fleizach.

Source/WebCore:

The core issue was that when childrenChanged was called on a
web area from an iframe that was just detached, it wasn't calling
childrenChanged on its parent scroll area, or that scroll area's
parent iframe element. To fix this, now AccessibilityScrollView
implements setNeedsToUpdateChildren and parentObjectIfExists,
and childrenChanged calls setNeedsToUpdateChildren on every object
in the parent chain, not just AccessibilityRenderObjects.

Test: accessibility/loading-iframe-updates-axtree.html

* accessibility/AXObjectCache.h:
* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::setNeedsToUpdateChildren):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::parentObjectIfExists):
(WebCore::AccessibilityRenderObject::childrenChanged):
* accessibility/AccessibilityRenderObject.h:
(WebCore::AccessibilityRenderObject::setNeedsToUpdateChildren):
* accessibility/AccessibilityScrollView.cpp:
(WebCore::AccessibilityScrollView::AccessibilityScrollView):
(WebCore::AccessibilityScrollView::updateChildrenIfNecessary):
(WebCore::AccessibilityScrollView::parentObject):
(WebCore::AccessibilityScrollView::parentObjectIfExists):
* accessibility/AccessibilityScrollView.h:
(WebCore::AccessibilityScrollView::setNeedsToUpdateChildren):

LayoutTests:

Add new test that makes sure that if you explore the accessibility
tree of an iframe and that iframe subsequently loads new content,
the iframe AccessibilityObject's descendants are updated to point
to the new content, not the old content.

* accessibility/loading-iframe-updates-axtree-expected.txt: Added.
* accessibility/loading-iframe-updates-axtree.html: Added.


Canonical link: https://commits.webkit.org/88614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100057 268f45cc-cd09-0410-ab3c-d52691b4dbfc