Source/WebCore/accessibility/AccessibilityScrollView.cpp
@@ -39,6 +39,7 @@ namespace WebCore {
     
 AccessibilityScrollView::AccessibilityScrollView(ScrollView* view)
     : m_scrollView(view)
+    , m_childrenDirty(false)
 {
 }
 
@@ -74,6 +75,9 @@ Widget* AccessibilityScrollView::widgetForAttachmentView() const
     
 void AccessibilityScrollView::updateChildrenIfNecessary()
 {
+    if (m_childrenDirty)
+        clearChildren();
+
     if (!m_haveChildren)
         addChildren();
     
@@ -174,10 +178,22 @@ AccessibilityObject* AccessibilityScrollView::parentObject() const
         return 0;
     
     HTMLFrameOwnerElement* owner = static_cast<FrameView*>(m_scrollView.get())->frame()->ownerElement();
-    if (owner && owner->renderPart())
-        return axObjectCache()->getOrCreate(owner->renderPart()->parent());
-    
+    if (owner && owner->renderer())
+        return axObjectCache()->getOrCreate(owner->renderer());
+
     return 0;
 }
     
+AccessibilityObject* AccessibilityScrollView::parentObjectIfExists() const
+{
+    if (!m_scrollView->isFrameView())
+        return 0;
+    
+    HTMLFrameOwnerElement* owner = static_cast<FrameView*>(m_scrollView.get())->frame()->ownerElement();
+    if (owner && owner->renderer())
+        return axObjectCache()->get(owner->renderer());
+    
+    return 0;
+}
+
 } // namespace WebCore    
